<resources>
    <string name="app_name">Simple Backup</string>
    <string name="application_image">Application image</string>
    <string name="app_version">Version</string>
    <string name="version">v%1$s</string>
    <string name="package_version">Package</string>
    <string name="search_button">Search button</string>
    <string name="search_for_apps">Search for apps</string>
    <string name="please_search">Please search for apps…</string>
    <string name="back">Back</string>
    <string name="press_back_again">Press BACK again to exit</string>
    <string name="details">App Details</string>
    <string name="delete">Delete</string>
    <string name="uninstall_app">Uninstall app</string>
    <string name="delete_backup">Delete backup</string>
    <string name="delete_backup_question">Do you want to delete this backup?</string>
    <string name="successfully_deleted_backups">Successfully deleted selected backups</string>
    <string name="backup_deleted_successfully">Successfully deleted %1$s</string>
    <string name="backup_deleted_unsuccessfully">Unsuccessfully deleted %1$s</string>
    <string name="unsuccessfully_deleted_files">Unsuccessfully deleted selected backups</string>
    <string name="home">Home</string>
    <string name="local">Local</string>
    <string name="local_backup">Local backup</string>
    <string name="local_backups">Local backups</string>
    <string name="cloud">Cloud</string>
    <string name="cloud_backup">Cloud backup</string>
    <string name="cloud_backups">Cloud backups</string>
    <string name="settings">Settings</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="batch_restore">Batch Restore</string>
    <string name="drive">Drive</string>
    <string name="data_in">Data in %1$s</string>
    <string name="app_list">Getting the app list</string>
    <string name="apk_size">Apk size %1$s</string>
    <string name="data_size">Total data size %1$s</string>
    <string name="apk_size_tooltip">Apk size</string>
    <string name="data_size_tooltip">Data size</string>
    <string name="first_installed_on">First installed on %1$s</string>
    <string name="backed_up_on">Backed up on %1$s</string>
    <string name="force_stop">Force Stop</string>
    <string name="application_stopped">Application stopped!</string>
    <string name="data">Data</string>
    <string name="ok">OK</string>
    <string name="split">SPLIT</string>
    <string name="settings_info">App info</string>
    <string name="unable_to_launch_app">Unable to launch this app</string>
    <string name="unable_to_create_temp_apk_install_dir">Unable to create temp apk install dir</string>
    <string name="unable_to_delete_temp_apk_install_dir">Unable to delete temp apk install dir</string>
    <string name="unable_to_delete_temp_dir">Unable to delete temp dir</string>
    <string name="unable_to_move_apks_to_temp_install_dir">Unable to move apk\'s to temp install dir</string>
    <string name="unable_to_uninstall_app">Unable to uninstall app</string>
    <string name="unable_to_install_app">Unable to install app</string>
    <string name="no_file_managers">You don\'t have installed file managers</string>
    <string name="root_detected_title">Root detected, but…</string>
    <string name="not_granted_info">You did not grant root access.
        \nRoot access is needed, in order to
        \nbackup/restore application data</string>
    <string name="not_rooted_title">Your phone is not rooted</string>
    <string name="not_rooted_info">However, you will only be able to back up apks without their data</string>
    <string name="storage_permission">Storage permission not granted.</string>
    <string name="contacts_permission">Contacts permission not granted.</string>
    <string name="storage_perm_info">This permission is required to manage backup files and folders.
        \nPlease set the storage permission in app settings.</string>
    <string name="contacts_perm_info">This permission is required to upload / download backup files and folders from cloud.
        \nPlease set the contacts permission in app settings.</string>
    <string name="work">Work</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="backing_up">Backing up</string>
    <string name="restoring">Restoring</string>
    <string name="unable_to_sign_in">Unable to sign in</string>
    <string name="uploading_to_drive">Uploading to drive</string>
    <string name="backup_progress_dir_info">Creating backup dirs</string>
    <string name="restore_progress_dir_info">Creating restore dirs</string>
    <string name="restore_apk_install_info">Installing apks</string>
    <string name="progress_type">%1$s %2$d / %3$d</string>
    <string name="backup_progress_data_info">Backing up app data</string>
    <string name="restore_progress_data_info">Restoring app data</string>
    <string name="restore_progress_uid_info">Unable to restore app data</string>
    <string name="backup_progress_zip_info">Zipping all data</string>
    <string name="restore_progress_zip_info">Unzipping all data</string>
    <string name="backup_progress_saving_application_data">Saving application data</string>
    <string name="backup_progress_successful">Backup successful</string>
    <string name="backup_progress_failed">Backup failed</string>
    <string name="backup_completed">Backup completed</string>
    <string name="restore_completed">Restore completed</string>
    <string name="successfully">successfully</string>
    <string name="unsuccessfully">unsuccessfully</string>
    <string name="restore_progress_successful">Restore successful</string>
    <string name="restore_progress_failed">Restore failed</string>
    <string name="uploading_to_cloud">Uploading backup to cloud</string>
    <string name="uploading_apk_cloud">Uploading apk backup to cloud</string>
    <string name="uploading_data_cloud">Uploading data backup to cloud</string>
    <string name="restored">Restored</string>
    <string name="backed_up">Backed up</string>
    <string name="finished_work_notification">%1$d %2$s %3$s %4$s %5$s</string>
    <string name="storage_perm_success">Storage permission granted successfully</string>
    <string name="set_manually">Set Manually</string>
    <string name="select_all">Select all</string>
    <string name="clear_selection">Clear selection</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="configure">Configure</string>
    <string name="applications">Applications</string>
    <string name="installed_apps">Installed apps</string>
    <string name="backups">Backups</string>
    <string name="app">App</string>
    <string name="apps">Apps</string>
    <string name="item">item</string>
    <string name="items">items</string>
    <string name="skip">Skip</string>
    <string name="skipping">Skipping %1$s…</string>
    <string name="cancel">Cancel</string>
    <string name="canceling_work">Canceling work, please wait…</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_backup">Favorite backup</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="unable_to_add_to_favorites">Unable to add app to favorites %1$s</string>
    <string name="successfully_added_items_to_favorites">Successfully added %1$d items to favorites</string>
    <string name="unable_to_add_items_to_favorites">Unable to add selected items to favorites %1$s</string>
    <string name="successfully_removed_items_from_favorites">Successfully removed %1$d items from favorites</string>
    <string name="unable_to_remove_items_from_favorites">Unable to remove selected items from favorites %1$s</string>
    <string name="target_sdk">Target SDK %1$d</string>
    <string name="min_sdk">Min SDK %1$d</string>
    <string name="notification_channel_name">Backup notification</string>
    <string name="notifications">Notifications</string>
    <string name="notification_settings">Notification settings</string>
    <string name="theme">Theme</string>
    <string name="choose_theme">Choose theme</string>
    <string name="exclude_app_cache">Exclude app\'s cache</string>
    <string name="exclude_app_cache_info">Exclude app\'s cache \nfrom data backup</string>
    <string name="double_press_back">Double press back to exit</string>
    <string name="exit_action">Exit action</string>
    <string name="storage">Storage</string>
    <string name="app_details">App details</string>
    <string name="native_libs">Native libs</string>
    <string name="no_native_libs">No native libs</string>
    <string name="user_app">User app</string>
    <string name="storage_info">%1$.2f GB of %2$.2f GB used</string>
    <string name="zip_compression_level">Zip compression level</string>
    <string name="notification_channel_description">Backup notification progress</string>
    <string name="done">Done!</string>
    <string name="fastest">Fastest</string>
    <string name="slowest">Slowest</string>
    <string name="welcome_to_simple_backup">Welcome to Simple Backup</string>
    <string name="permit_usage_access">Permit usage access.\nUsage access is required to determine the size of the app\'s cache and data</string>
    <string name="no_backups">No backups found. Please make a backup or refresh the list</string>
    <string name="no_favorites">No favorites found. Please add your favorites from the application list</string>
    <string name="allow_manage_files">Allow management of all files. This permission is required to successfully manage folders and backup files.</string>
    <string name="manage_all_files">Manage all files</string>
    <string name="usage_access">Usage access</string>
    <string name="choose_backup_location">Choose backup location</string>
    <string name="work_finished">Work finished</string>
</resources>