<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/restoreFragment"
        android:title="@string/restore"
        android:icon="@drawable/restore_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/cloudFragment"
        android:title="@string/cloud"
        android:icon="@drawable/cloud_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/settings_24dp"
        app:showAsAction="ifRoom" />

</menu>