<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_for_apps"
        android:visible="false"
        app:actionViewClass="com.stefan.simplebackup.ui.views.MaterialSearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/add_to_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/add_to_favorites"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete_backup"
        android:icon="@drawable/ic_delete"
        android:title="@string/add_to_favorites"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>